Add release pages

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="https://open.spotify.com/album/5fuEzONosF7erB0SJPT1ow" target="_blank" class="btn oneMusic-btn mt-50">New single: 100 Times <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="100_times.html" class="btn oneMusic-btn mt-50">New single: 100 Times <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
 <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
                             </div>
@@ -141,7 +141,7 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="https://open.spotify.com/album/5fuEzONosF7erB0SJPT1ow" target="_blank" class="btn oneMusic-btn mt-50">New single: 100 Times <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="100_times.html" class="btn oneMusic-btn mt-50">New single: 100 Times <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
                                 <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
                             </div>
@@ -159,7 +159,7 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="https://open.spotify.com/album/5fuEzONosF7erB0SJPT1ow" target="_blank" class="btn oneMusic-btn mt-50">New single: 100 Times <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="100_times.html" class="btn oneMusic-btn mt-50">New single: 100 Times <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
                                 <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
                             </div>
@@ -177,7 +177,7 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="https://open.spotify.com/album/5fuEzONosF7erB0SJPT1ow" target="_blank" class="btn oneMusic-btn mt-50">New single: 100 Times <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="100_times.html" class="btn oneMusic-btn mt-50">New single: 100 Times <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
                                 <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
                             </div>
@@ -266,7 +266,7 @@
                                             <a href="https://open.spotify.com/album/5fuEzONosF7erB0SJPT1ow" title="100 Times - Spotify" target="_blank">
                                                 <i class="fa fa-spotify"></i>
                                             </a>&nbsp;
-                                            <a href="https://music.apple.com/gb/album/100-times-single/1662177163" title="100 Times - Apple Music" target="_blank">
+                                            <a href="https://music.apple.com/album/100-times-single/1662177163" title="100 Times - Apple Music" target="_blank">
                                                 <i class="fa fa-apple"></i>
                                             </a>&nbsp;
                                             <a href="https://borertreetops.bandcamp.com/track/100-times" title="100 Times - Bandcamp" target="_blank">
@@ -309,7 +309,7 @@
                                             <a href="https://open.spotify.com/album/3HlqdzphRDEcX0eq9jWYSg" title="White Pearls - Spotify" target="_blank">
                                                 <i class="fa fa-spotify"></i>
                                             </a>&nbsp;
-                                            <a href="https://music.apple.com/it/album/white-pearls/1604054262" title="White Pearls - Apple Music" target="_blank">
+                                            <a href="https://music.apple.com/album/white-pearls/1604054262" title="White Pearls - Apple Music" target="_blank">
                                                 <i class="fa fa-apple"></i>
                                             </a>&nbsp;
                                             <a href="https://borertreetops.bandcamp.com/album/white-pearls" title="White Pearls - Bandcamp" target="_blank">
@@ -351,7 +351,7 @@
                                             <a href="https://open.spotify.com/album/3XAHtdAyZEVvCJPLKBnq1x" title="Circles - Spotify" target="_blank">
                                                 <i class="fa fa-spotify"></i>
                                             </a>&nbsp;
-                                            <a href="https://music.apple.com/it/album/circles-single/1596839515?l=en" title="Circles - Apple Music" target="_blank">
+                                            <a href="https://music.apple.com/album/circles-single/1596839515" title="Circles - Apple Music" target="_blank">
                                                 <i class="fa fa-apple"></i>
                                             </a>&nbsp;
                                             <a href="https://borertreetops.bandcamp.com/track/circles" title="Circles - Bandcamp" target="_blank">
@@ -360,7 +360,7 @@
                                             <a href="https://soundcloud.com/borertreetops/sets/circles" title="Circles - Soundcloud" target="_blank">
                                                 <i class="fa fa-soundcloud"></i>
                                             </a>&nbsp;
-                                            <a href="https://www.youtube.com/watch?v=gvnaq9OnswY" title="Circles - YouTube" target="_blank">
+                                            <a href="https://www.youtube.com/playlist?list=OLAK5uy_mtWnkLsZ6V0qckB2z8d8XWB7bLs-1ROns" title="Circles - YouTube" target="_blank">
                                                 <i class="fa fa-youtube"></i>
                                             </a>
                                         </p>
@@ -393,7 +393,7 @@
                                             <a href="https://open.spotify.com/album/3BdMhYw7OGbI9dM2GgY3Dz" title="484 - Spotify" target="_blank">
                                                 <i class="fa fa-spotify"></i>
                                             </a>&nbsp;
-                                            <a href="https://music.apple.com/it/album/484-single/1592826756?l=en" title="484 - Apple Music" target="_blank">
+                                            <a href="https://music.apple.com/album/484-single/1592826756" title="484 - Apple Music" target="_blank">
                                                 <i class="fa fa-apple"></i>
                                             </a>&nbsp;
                                             <a href="https://borertreetops.bandcamp.com/track/484" title="484 - Bandcamp" target="_blank">
@@ -402,7 +402,7 @@
                                             <a href="https://soundcloud.com/borertreetops/sets/484a1" title="484 - Soundcloud" target="_blank">
                                                 <i class="fa fa-soundcloud"></i>
                                             </a>&nbsp;
-                                            <a href="https://www.youtube.com/watch?v=zvYVgLfpcgg" title="484 - YouTube" target="_blank">
+                                            <a href="https://www.youtube.com/playlist?list=OLAK5uy_lNKZNPIUhBcX0SIl4o4KDuTwnv18d6kVQ" title="484 - YouTube" target="_blank">
                                                 <i class="fa fa-youtube"></i>
                                             </a>
                                         </p>
@@ -436,7 +436,7 @@
                                             <a href="https://open.spotify.com/album/7FwlwjJbF9t4g6ZiE23oVD" title="Loud Silence - Spotify" target="_blank">
                                                 <i class="fa fa-spotify"></i>
                                             </a>&nbsp;
-                                            <a href="https://music.apple.com/it/album/loud-silence/1555817700?l=en" title="Loud Silence - Apple Music" target="_blank">
+                                            <a href="https://music.apple.com/album/loud-silence/1555817700" title="Loud Silence - Apple Music" target="_blank">
                                                 <i class="fa fa-apple"></i>
                                             </a>&nbsp;
                                             <a href="https://borertreetops.bandcamp.com/album/loud-silence" title="Loud Silence - Bandcamp" target="_blank">
@@ -463,32 +463,32 @@
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="https://open.spotify.com/album/5fuEzONosF7erB0SJPT1ow"><img src="img/releases/cover_100_times.png" alt="100 Times"></a>
+                                    <a href="100_times.html"><img src="img/releases/cover_100_times.png" alt="100 Times"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="https://open.spotify.com/album/3HlqdzphRDEcX0eq9jWYSg"><img src="img/releases/front_cover.jpg" alt="White Pearls"></a>
+                                    <a href="white_pearls.html"><img src="img/releases/front_cover.jpg" alt="White Pearls"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="https://open.spotify.com/album/3XAHtdAyZEVvCJPLKBnq1x"><img src="img/releases/cover_circles.jpg" alt="Circles"></a>
+                                    <a href="circles.html"><img src="img/releases/cover_circles.jpg" alt="Circles"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="https://open.spotify.com/album/3BdMhYw7OGbI9dM2GgY3Dz"><img src="img/releases/cover_484.jpg" alt="484"></a>
+                                    <a href="484.html"><img src="img/releases/cover_484.jpg" alt="484"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="https://open.spotify.com/album/7FwlwjJbF9t4g6ZiE23oVD"><img src="img/releases/cover_loud_silence.png" alt="Loud Silence"></a>
+                                    <a href="loud_silence.html"><img src="img/releases/cover_loud_silence.png" alt="Loud Silence"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="https://open.spotify.com/album/3Uno3PIPqE61eeyuBnZwDJ"><img src="img/releases/cover_addictions.png" alt="Addictions"></a>
+                                    <a href="addictions.html"><img src="img/releases/cover_addictions.png" alt="Addictions"></a>
                                 </div>
 
                             </div>
@@ -653,7 +653,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             </div>
         </div>
     </footer>
-    <!-- ##### Footer Area Start ##### -->
+    <!-- ##### Footer Area End ##### -->
 
     <!-- ##### All Javascript Script ##### -->
     <!-- jQuery-2.2.4 js -->
