Update about section

--- a/index.html
+++ b/index.html
@@ -229,8 +229,7 @@
                         <p>Borer Treetops is an electro-dream pop project from Cambridge, UK. <br>
                             Borer Treetops take great inspiration from both old-school and modern psychedelic music,
                             with a bit of electronic touches as well as pop and indie references. Spacey and dreamy
-                            music blends with intimate lyrics, focusing on how to deal with feelings and the
-                            difficulties of communicating them properly.</p>
+                            music blends with intimate lyrics, exploring the infinite shades of human feelings.</p>
                         <div class="song-play-area">
                             <div class="song-name">
                                 <p>Borer Treetops - 100 Times</p>
