Add missing image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 
-    <meta name="description" content="Borer Treetops is an electro-dream pop project from Cambridge, UK.">
+    <meta name="description" content="Borer Treetops is a psychedelic rock/dream pop project from Cambridge, UK.">
     <meta property="og:title" content="Borer Treetops">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Borer Treetops is a psychedelic-rock/dream pop project from Cambridge, UK.">
@@ -36,7 +36,7 @@
             "@context": "http://schema.org",
             "@type": "WebSite",
             "name": "Borer Treetops",
-            "description": "Borer Treetops is a psychedelic-rock/dream pop project from Cambridge, UK.",
+            "description": "Borer Treetops is a psychedelic rock/dream pop project from Cambridge, UK.",
             "url": "https://borertreetops.com",
             "image": "https://borertreetops.com/img/core-img/logo_square_min.png"
         }
@@ -245,7 +245,7 @@
                         <div class="section-heading white text-left mb-30">
                             <h2>Borer Treetops</h2>
                         </div>
-                        <p>Borer Treetops is a psychedelic-rock/dream pop project from Cambridge, UK. <br>
+                        <p>Borer Treetops is a psychedelic rock/dream pop project from Cambridge, UK. <br>
                             Borer Treetops take great inspiration from both old-school and modern psychedelic music,
                             with a bit of electronic touches as well as pop and indie references. Spacey and dreamy
                             music blends with intimate lyrics, exploring the infinite shades of human feelings.</p>
