--- a/484.html
+++ b/484.html
@@ -119,7 +119,7 @@
     <div class="row mt-50 mb-100">
       <div class="col-12 col-md-5 col-lg-4">
         <div class="featured-artist-thumb">
-          <img src="img/releases/cover_484.jpg" alt="Borer Treetops - 484">
+          <img src="img/releases/cover_484_1800.jpg" alt="Borer Treetops - 484">
         </div>
       </div>
       <div class="col-12 col-md-7 col-lg-8">
