--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <!-- Single Hero Slide -->
             <div class="single-hero-slide d-flex align-items-center justify-content-center">
                 <!-- Slide Img -->
-                <div class="slide-img bg-img" style="background-image: url(img/releases/cover_chisholm.png);"></div>
+                <div class="slide-img bg-img" style="background-image: url(img/releases/cover_chisholm_1800.png);"></div>
                 <!-- Slide Content -->
                 <div class="container">
                     <div class="row">
@@ -234,12 +234,12 @@
     <section id="about" class="featured-artist-area section-padding-100 bg-img bg-overlay bg-fixed" style="background-image: url(img/core-img/treetops_studio.jpg);">
         <div class="container">
             <div class="row align-items-end">
-                <div class="col-12 col-md-5 col-lg-4">
+                <div class="col-12 col-md-4 col-lg-3">
                     <div class="featured-artist-thumb">
                         <img src="img/core-img/logo_square_min.png" alt="Borer Treetops">
                     </div>
                 </div>
-                <div class="col-12 col-md-7 col-lg-8">
+                <div class="col-12 col-md-8 col-lg-9">
                     <div class="featured-artist-content">
                         <!-- Section Heading -->
                         <div class="section-heading white text-left mb-30">
@@ -603,47 +603,47 @@
 
                                 <!-- Widget Area -->
 <!--                                <div class="single-widget-area mb-30">-->
-<!--                                    <a href="fifth_fundamental_force.html"><img src="img/releases/cover_fifth_fundamental_force.png" alt="Fifth Fundamental Force"></a>-->
+<!--                                    <a href="fifth_fundamental_force.html"><img src="img/releases/cover_fifth_fundamental_force_1800.png" alt="Fifth Fundamental Force"></a>-->
 <!--                                </div>-->
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="chisholm.html"><img src="img/releases/cover_chisholm.png" alt="Chisholm"></a>
+                                    <a href="chisholm.html"><img src="img/releases/cover_chisholm_1800.png" alt="Chisholm"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="serendipity.html"><img src="img/releases/cover_serendipity.png" alt="Serendipity"></a>
+                                    <a href="serendipity.html"><img src="img/releases/cover_serendipity_1800.png" alt="Serendipity"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="100_times.html"><img src="img/releases/cover_100_times.png" alt="100 Times"></a>
+                                    <a href="100_times.html"><img src="img/releases/cover_100_times_1800.png" alt="100 Times"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="white_pearls.html"><img src="img/releases/front_cover.jpg" alt="White Pearls"></a>
+                                    <a href="white_pearls.html"><img src="img/releases/cover_white_pearls_1800.jpg" alt="White Pearls"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="circles.html"><img src="img/releases/cover_circles.jpg" alt="Circles"></a>
+                                    <a href="circles.html"><img src="img/releases/cover_circles_1800.jpg" alt="Circles"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="484.html"><img src="img/releases/cover_484.jpg" alt="484"></a>
+                                    <a href="484.html"><img src="img/releases/cover_484_1800.jpg" alt="484"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="loud_silence.html"><img src="img/releases/cover_loud_silence.png" alt="Loud Silence"></a>
+                                    <a href="loud_silence.html"><img src="img/releases/cover_loud_silence_1800.png" alt="Loud Silence"></a>
                                 </div>
 
                                 <!-- Widget Area -->
                                 <div class="single-widget-area mb-30">
-                                    <a href="addictions.html"><img src="img/releases/cover_addictions.png" alt="Addictions"></a>
+                                    <a href="addictions.html"><img src="img/releases/cover_addictions_1800.png" alt="Addictions"></a>
                                 </div>
 
                             </div>
