Add coming soon text

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Chisholm out now <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Fifth Fundamental Force <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
-                                <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
+                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>
                             </div>
                         </div>
                     </div>
@@ -142,9 +142,9 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Chisholm out now <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Fifth Fundamental Force <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
-<!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
+                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>
                             </div>
                         </div>
                     </div>
@@ -161,9 +161,9 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Chisholm out now <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Fifth Fundamental Force <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
-                                <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
+                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>
                             </div>
                         </div>
                     </div>
@@ -180,9 +180,9 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Chisholm out now <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Fifth Fundamental Force <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
-                                <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
+                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>
                             </div>
                         </div>
                     </div>
@@ -199,9 +199,9 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Chisholm out now <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Fifth Fundamental Force <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
-                                <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
+                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>
                             </div>
                         </div>
                     </div>
@@ -218,9 +218,9 @@
                         <div class="col-12">
                             <div class="hero-slides-content text-center">
                                 <h2 data-animation="fadeInUp" data-delay="300ms">Borer Treetops <span>Borer Treetops</span></h2>
-                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Chisholm out now <i class="fa fa-angle-double-right"></i></a>
+                                <a data-animation="fadeInUp" data-delay="500ms" href="chisholm.html" class="btn oneMusic-btn mt-50">Fifth Fundamental Force <i class="fa fa-angle-double-right"></i></a>
                                 <br><br>
-                                <!--                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>-->
+                                <h6 data-animation="fadeInUp" data-delay="100ms">Coming soon...</h6>
                             </div>
                         </div>
                     </div>
