Fix release and reviews sections

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                 <div class="row">
                   <div class="col-md-12">
                     <div class="text-bg">
-                      <h1>Borer Treetops</h1>
-                      <a href="fifth_fundamental_force.html">Fifth Fundamental Force </a>
+                      <h1>Fifth Fundamental Force</h1>
+                      <a href="fifth_fundamental_force.html">New Album Out Now! </a>
                     </div>
                   </div>
                 </div>
@@ -214,49 +214,60 @@
   <!-- End About -->
 
   <!-- Reviews -->
-  <div id="reviews" class="upcoming">
-    <div class="container-fluid padding_left3">
+  <div id="reviews" class="Gallery">
+    <div class="container">
       <div class="row display_boxflex">
-        <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
-          <div class="box_text">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
             <div class="titlepage">
               <h2>Reviews</h2>
             </div>
-          </div>
         </div>
+      </div>
 
-        <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 border_right">
-          <div class="upcomimg">
+      <div class="row">
+
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 border_right">
             <h3>Fifth Fundamental Force</h3>
             <p>"Fifth Fundamental Force takes one on a journey – a journey through forces indescribable, and oft-times unmanageable. But the album, through its music, shows that humanity – that love – is just as essential as any pervasive cosmic building block carved across billions of years, and through the undulating, unrelenting construction/destruction responsible for our current physical footing. If you’re wondering what it sounds like to weave humanity’s heart throughout reality’s profound fabric, I think we found the perfect album."
               <br>
               <a href="https://thearkofmusic.com/borer-treetops-fifth-fundamental-force/" title="The Ark of Music" target="_blank">The Ark of Music</a>
             </p>
-            <br>
+          <br>
+        </div>
 
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 border_right">
             <h3>Serendipity</h3>
             <p>"Serendipity captures the listener with its dreamy, ethereal textures and holds this attention with its heavy serving of pop hooks and introspective storytelling. This album almost sounds like a cool mash-up between Tame Impala and The Stone Roses circa 1989, but to truly get the picture, you’ll just have to put it on repeat and get lost in its vortex of lush, trippy grooves."
               <br>
               <a href="https://thearkofmusic.com/borer-treetops-serendipity/" title="The Ark of Music" target="_blank">The Ark of Music</a>
             </p>
-            <br>
+          <br>
+        </div>
 
+      </div>
+
+      <div class="row">
+
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 border_right">
             <h3>White Pearls</h3>
             <p>"An excellent showing of growth and artist development from Borer Treetops. On White Pearls, you can clearly see that they are finding their niche and becoming more comfortable creating their brand of insightful electronic music. With heartfelt stories that feel emotional and genuine and a deep understanding of using production to further the message at hand, we’d call White Pearls a bonafide success and deem it worth a listen for any electronic/alternative fan."
               <br>
               <a href="https://thearkofmusic.com/borer-treetops-white-pearls/" title="The Ark of Music" target="_blank">The Ark of Music</a>
             </p>
-            <br>
+          <br>
+        </div>
 
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 border_right">
             <h3>Loud Silence</h3>
             <p>"Loud Silence is primarily driven by complex layers of synths carrying bright melodies. Perhaps a bit reminiscent of MGMT, the overall energy on this album is a well-blended mix of upbeat and laid-back. There’s a spacey, dreamy feel through many of the tracks, creating a cohesive listening experience across its length."
               <br>
               <a href="https://thearkofmusic.com/borer-treetops-loud-silence/" title="The Ark of Music" target="_blank">The Ark of Music</a>
             </p>
-
-          </div>
+          <br>
         </div>
+
       </div>
+
     </div>
   </div>
   <!-- End Reviews -->
@@ -265,67 +276,61 @@
   <div id="releases" class="Gallery">
     <div class="container">
       <div class="row display_boxflex">
-        <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12">
-          <div class="row">
-
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 margi_bott">
-              <div class="Gallery_img">
-                <figure><img src="img/releases/cover_fifth_fundamental_force_1800.png" alt="Fifth Fundamental Force"/></figure>
-              </div>
-
-              <div class="hover_box">
-                <ul class="icon_hu">
-                  <li><a href="fifth_fundamental_force.html"><h3>Fifth Fundamental Force</h3></a></li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 margi_bott">
-              <div class="Gallery_img">
-                <figure><img src="img/releases/cover_serendipity_1800.png" alt="Serendipity"/></figure>
-              </div>
-
-              <div class="hover_box">
-                <ul class="icon_hu">
-                  <li><a href="serendipity.html"><h3>Serendipity</h3></a></li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 margi_bott1">
-              <div class="Gallery_img">
-                <figure><img src="img/releases/cover_white_pearls_1800.jpg" alt="White Pearls"/></figure>
-              </div>
-
-              <div class="hover_box">
-                <ul class="icon_hu">
-                  <li><a href="white_pearls.html"><h3>White Pearls</h3></a></li>
-                </ul>
-              </div>
-            </div>
-
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-              <div class="Gallery_img">
-                <figure><img src="img/releases/cover_loud_silence_1800.png" alt="Loud Silence"/></figure>
-              </div>
-
-              <div class="hover_box">
-                <ul class="icon_hu">
-                  <li><a href="loud_silence.html"><h3>Loud Silence</h3></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-          <div class="Gallery_text">
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
             <div class="titlepage">
               <h2>Releases</h2>
             </div>
-          </div>
         </div>
       </div>
+
+      <div class="row display_boxflex">
+
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+          <div class="Gallery_img">
+            <figure><img src="img/releases/cover_fifth_fundamental_force_1800.png" alt="Fifth Fundamental Force"/></figure>
+          </div>
+          <div class="hover_box">
+            <ul class="icon_hu">
+              <li><a href="fifth_fundamental_force.html"><h3>Fifth Fundamental Force</h3></a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+          <div class="Gallery_img">
+            <figure><img src="img/releases/cover_serendipity_1800.png" alt="Serendipity"/></figure>
+          </div>
+          <div class="hover_box">
+            <ul class="icon_hu">
+              <li><a href="serendipity.html"><h3>Serendipity</h3></a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+          <div class="Gallery_img">
+            <figure><img src="img/releases/cover_white_pearls_1800.jpg" alt="White Pearls"/></figure>
+          </div>
+          <div class="hover_box">
+            <ul class="icon_hu">
+              <li><a href="white_pearls.html"><h3>White Pearls</h3></a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+          <div class="Gallery_img">
+            <figure><img src="img/releases/cover_loud_silence_1800.png" alt="Loud Silence"/></figure>
+          </div>
+          <div class="hover_box">
+            <ul class="icon_hu">
+              <li><a href="loud_silence.html"><h3>Loud Silence</h3></a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+
     </div>
   </div>
   <!-- End Releases -->
