--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta property="og:description" content="Borer Treetops is a psychedelic-rock/dream pop project from Cambridge, UK.">
   <meta property="og:url" content="https://borertreetops.com">
   <meta property="og:site_name" content="Borer Treetops">
-  <meta property="og:image" content="https://borertreetops/img/logo_square_min.png">
+  <meta property="og:image" content="https://borertreetops.com/img/logo_square_min.png">
 
   <!-- Favicon -->
   <link rel="icon" href="img/favicons/favicon.ico">
