Add Red Dust Storm release

--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
                 <div class="row">
                   <div class="col-md-12">
                     <div class="text-bg">
-                      <h1>Fifth Fundamental Force</h1>
-                      <a href="fifth_fundamental_force.html">New Album Out Now! </a>
+                      <h1>&nbsp;</h1>
+                      <h1>Red Dust Storm</h1>
+                      <a href="red_dust_storm.html">New Album Out Now! </a>
                     </div>
                   </div>
                 </div>
@@ -285,7 +286,20 @@
 
       <div class="row display_boxflex">
 
-        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12"> &nbsp; </div>
+
+        <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12">
+          <div class="Gallery_img">
+            <figure><img src="img/releases/cover_red_dust_storm_1800.png" alt="Red Dust Storm"/></figure>
+          </div>
+          <div class="hover_box">
+            <ul class="icon_hu">
+              <li><a href="red_dust_storm.html"><h3>Red Dust Storm</h3></a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12">
           <div class="Gallery_img">
             <figure><img src="img/releases/cover_fifth_fundamental_force_1800.png" alt="Fifth Fundamental Force"/></figure>
           </div>
@@ -296,7 +310,7 @@
           </div>
         </div>
 
-        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+        <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12">
           <div class="Gallery_img">
             <figure><img src="img/releases/cover_serendipity_1800.png" alt="Serendipity"/></figure>
           </div>
@@ -307,7 +321,17 @@
           </div>
         </div>
 
-        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12"> &nbsp; </div>
+
+      </div>
+
+      &nbsp;
+
+      <div class="row display_boxflex">
+
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12"> &nbsp; </div>
+
+        <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12">
           <div class="Gallery_img">
             <figure><img src="img/releases/cover_white_pearls_1800.jpg" alt="White Pearls"/></figure>
           </div>
@@ -318,7 +342,7 @@
           </div>
         </div>
 
-        <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+        <div class="col-xl-2 col-lg-2 col-md-2 col-sm-12">
           <div class="Gallery_img">
             <figure><img src="img/releases/cover_loud_silence_1800.png" alt="Loud Silence"/></figure>
           </div>
@@ -328,6 +352,8 @@
             </ul>
           </div>
         </div>
+
+        <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12"> &nbsp; </div>
 
       </div>
 
