Add Bandcamp and Soundcloud links

--- a/red_dust_storm.html
+++ b/red_dust_storm.html
@@ -137,8 +137,8 @@
           <a href="https://open.spotify.com/album/5FkvXGsoQDFiniefBCaas1" target="_blank">&nbsp; Listen on Spotify &nbsp; <i class="fa fa-spotify"></i> </a><br><br>
           <a href="https://music.apple.com/gb/album/red-dust-storm/1773623180" target="_blank">&nbsp; Listen on Apple Music &nbsp; <i class="fa fa-apple"></i> </a><br><br>
           <a href="https://youtube.com/playlist?list=OLAK5uy_kfhq3bCD4u5q7n7GIS1LxHXbfvXlbbTzI" target="_blank">&nbsp; Listen on YouTube &nbsp; <i class="fa fa-youtube"></i> </a><br><br>
-<!--          <a href="https://borertreetops.bandcamp.com/album/fifth-fundamental-force" target="_blank">&nbsp; Listen on Bandcamp &nbsp; <i class="fa fa-bandcamp"></i> </a><br><br>-->
-<!--          <a href="https://soundcloud.com/borertreetops/sets/fifth-fundamental-force" target="_blank">&nbsp; Listen on Soundcloud &nbsp; <i class="fa fa-soundcloud"></i> </a>-->
+          <a href="https://borertreetops.bandcamp.com/album/red-dust-storm" target="_blank">&nbsp; Listen on Bandcamp &nbsp; <i class="fa fa-bandcamp"></i> </a><br><br>
+          <a href="https://soundcloud.com/borertreetops/sets/red-dust-storm" target="_blank">&nbsp; Listen on Soundcloud &nbsp; <i class="fa fa-soundcloud"></i> </a>
         </div>
       </div>
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
