Fix bottom social icons

--- a/fifth_fundamental_force.html
+++ b/fifth_fundamental_force.html
@@ -177,7 +177,7 @@
                     </a></li>
 
                     <li><a href="https://www.instagram.com/borertreetops" title="Borer Treetops - Instagram" target="_blank">
-                      <i class="fa fa-twitter" aria-hidden="true"></i>
+                      <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a></li>
 
                     <li><a href="https://www.youtube.com/@borertreetops" title="Borer Treetops - YouTube" target="_blank">
@@ -185,7 +185,7 @@
                     </a></li>
 
                     <li><a href="https://open.spotify.com/artist/5rXOzZ2sm1q8OQ6jm9vENi" title="Borer Treetops - Spotify" target="_blank">
-                      <i class="fa fa-instagram" aria-hidden="true"></i>
+                      <i class="fa fa-spotify" aria-hidden="true"></i>
                     </a></li>
 
                     <li><a href="https://soundcloud.com/borertreetops" title="Borer Treetops - Soundcloud" target="_blank">
